--- a/assets/style/Style.css
+++ b/assets/style/Style.css
@@ -82,12 +82,14 @@ body {
   gap: 10px;
 }
 .desc_profil {
+  flex: 3;
+  max-width: 59%;
 }
 .hero_title {
   font-size: 40px;
   font-family: "Roboto", sans-serif;
   font-weight: 800;
-  margin-bottom: 5px;
+  margin-bottom: 16px;
   color: hsl(var(--primary));
 }
 .sub_title {
@@ -99,9 +101,13 @@ body {
 .desc_hero {
   line-height: 25px;
   width: 81%;
+  text-align: justify;
 }
 .right {
-  width: 100%;
+  flex: 2;
+  display: flex;
+  align-items: center;
+  max-width: 257px;
 }
 .profil_img {
   width: 200px;
@@ -136,9 +142,20 @@ body {
   flex-direction: column;
   gap: 5px;
 }
+.container_card {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
+.card_img {
+  width: 3rem;
+  height: 3rem;
+  object-fit: cover;
+  border-radius: 5px;
+}
 .item {
   background: transparent;
-  padding: 8px;
+  padding: 6px;
   border-radius: 5px;
   transition: 0.5s ease-in-out;
 }
@@ -157,6 +174,7 @@ body {
 }
 .desc {
   font-size: 12px;
+  margin-top: 0.135rem;
 }
 .last_projet {
   flex: 2;
@@ -178,4 +196,33 @@ body {
   border: 1px solid hsl(var(--border));
   border-radius: 0.5em;
   color: hsl(var(--card-foreground));
+}
+.work-item {
+  padding: 16px;
+  display: flex;
+  gap: 12px;
+}
+.desc_work {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+.desc_work-exp {
+  position: relative;
+}
+.mission {
+  position: absolute;
+  top: 44px;
+  left: 0;
+  background-color: transparent;
+  padding: 4px;
+  border-radius: 5px;
+  font-size: 8px;
+  font-weight: 500;
+  border: 1px solid;
+}
+.logo_work-img {
+  height: 3rem;
+  width: 3rem;
+  border-radius: 5px;
 }
